# crane

./: .gitignore  CMakeLists.txt  Cargo.toml  branch.ps1  build.rs  crane.1.json  crane.json  crane.jsonc  crane.ps1  crane.sln  github.json  releases.json  releases.ps1  test.json  test.ps1  todo
cmake/: Glow.cmake  mthierman.glow.cmake  nlohmann.json.cmake
common/: Cargo.toml
common/src/: lib.rs
crane/: Program.cs
libcurl/: main.cxx
notes/: find_vs.rs  http.rs  notes  rc
src/: crane.rs  lib.rs  main.cxx  main.rs  win.rs
src/crane/: mod.rs  providers.rs
src/crane/providers/: github.rs  http.rs  mod.rs  nuget.rs
src/providers/: github.rs  http.rs  nuget.rs
