[package]
name = "crane"
version = "0.0.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_Shell",
    "Win32_System_Com_Urlmon",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
url = { version = "2.5.3" }

[build-dependencies]
common = { path = "./common" }
