[package]
name = "crane"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { path = "./common" }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = { version = "1.0.145" }
url = { version = "2.5.7" }
windows = { version = "0.62.0", features = [
  "Win32_System_Com_Urlmon",
  "Win32_UI_Shell",
] }

[build-dependencies]
common = { path = "./common" }
